Initial commit for Finance Tutor

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,41 @@
+# Top-level ignores
+.env
+*.log
+.DS_Store
+__pycache__/
+*.pyc
+
+# Backend ignores
+/backend/venv/
+/backend/__pycache__/
+backend/.env
+backend/.pytest_cache/
+backend/.mypy_cache/
+backend/finance_index.faiss
+backend/*.db
+backend/*.sqlite3
+
+# Python packaging files (if added later)
+*.egg-info/
+dist/
+build/
+
+# Frontend ignores
+/frontend/node_modules/
+frontend/.env
+frontend/.next/
+frontend/dist/
+frontend/.turbo/
+frontend/.vercel/
+
+# Vite/React build artifacts
+frontend/.cache/
+frontend/.vite/
+
+
+# ==================== Default ====================
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
