--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,143 +1,11 @@
-absl-py==1.3.0
-aiohappyeyeballs==2.6.1
-aiohttp==3.10.11
-aiosignal==1.3.1
-annotated-types==0.7.0
-anyio==4.9.0
-astroid==2.14.1
-astunparse==1.6.3
-async-timeout==4.0.2
-attrs==22.2.0
-black==23.1.0
-blis==0.7.9
-cachetools==5.2.0
-catalogue==2.0.8
-certifi==2022.9.24
-charset-normalizer==2.1.1
-click==8.1.3
-confection==0.0.4
-contourpy==1.0.7
-cycler==0.11.0
-cymem==2.0.7
-datasets==2.9.0
-dill==0.3.6
-distro==1.9.0
-exceptiongroup==1.2.2
-fastapi==0.115.12
-filelock==3.9.0
-flatbuffers==22.10.26
-fonttools==4.38.0
-frozenlist==1.3.3
-fsspec==2023.12.2
-gast==0.4.0
-google-auth==2.14.1
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-greenlet==3.1.1
-grpcio==1.50.0
-gunicorn==23.0.0
-h11==0.14.0
-h5py==3.7.0
-httpcore==1.0.7
-httpx==0.28.1
-huggingface-hub==0.20.1
-idna==3.4
-iniconfig==2.1.0
-isort==5.10.1
-Jinja2==3.1.2
-jiter==0.9.0
-joblib==1.4.2
-jsonpatch==1.33
-jsonpointer==3.0.0
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-kiwisolver==1.4.4
-langchain==0.3.23
-langchain-core==0.3.51
-langchain-openai==0.3.12
-langchain-pinecone==0.2.4
-langchain-tests==0.3.17
-langchain-text-splitters==0.3.8
-langcodes==3.3.0
-langsmith==0.3.25
-lazy-object-proxy==1.7.1
-libclang==14.0.6
-lit==18.1.8
-Markdown==3.4.1
-MarkupSafe==2.1.1
-matplotlib==3.6.3
-mccabe==0.7.0
-multidict==6.0.4
-multiprocess==0.70.14
-murmurhash==1.0.9
-mypy-extensions==1.0.0
-numpy==2.2.4
-oauthlib==3.2.2
-openai==1.70.0
-opt-einsum==3.3.0
-orjson==3.10.16
-packaging==24.2
-pandas==1.5.3
-pathspec==0.11.0
-pathy==0.10.1
-pep8==1.7.1
-Pillow==9.4.0
-pinecone==6.0.2
-pinecone-plugin-interface==0.0.7
-platformdirs==2.5.2
-pluggy==1.5.0
-preshed==3.0.8
-propcache==0.3.1
-protobuf==3.19.6
-pyarrow==10.0.1
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pydantic==2.11.2
-pydantic_core==2.33.1
-pylint==2.16.1
-pylint-venv==2.3.0
-pyparsing==3.0.9
-pytest==8.3.5
-pytest-asyncio==0.26.0
-pytest-socket==0.7.0
-python-dateutil==2.8.2
-python-dotenv==1.1.0
-pytz==2022.7.1
-PyYAML==6.0
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==1.3.1
-requests-toolbelt==1.0.0
-responses==0.18.0
-rsa==4.9
-scikit-learn==1.6.1
-scipy==1.15.2
-six==1.16.0
-smart-open==6.3.0
-sniffio==1.3.1
-spacy==3.5.0
-spacy-legacy==3.0.12
-spacy-loggers==1.0.4
-SQLAlchemy==2.0.40
-srsly==2.4.6
-starlette==0.46.1
-syrupy==4.9.1
-tenacity==9.1.2
-termcolor==2.1.0
-thinc==8.1.9
-threadpoolctl==3.6.0
-tiktoken==0.9.0
-tomli==2.0.1
-tomlkit==0.11.5
-tqdm==4.64.1
-typer==0.7.0
-typing-inspection==0.4.0
-typing_extensions==4.13.1
-urllib3==1.26.12
-uvicorn==0.34.0
-wasabi==1.1.1
-Werkzeug==2.2.2
-wrapt==1.14.1
-xxhash==3.2.0
-yarl==1.19.0
-zstandard==0.23.0
+fastapi
+uvicorn
+langchain
+langchain-openai
+langchain-pinecone
+openai
+pinecone
+tiktoken
+python-dotenv
+requests
+pydantic
